--- a/cup-vue/src/assets/css/global.css
+++ b/cup-vue/src/assets/css/global.css
@@ -37,3 +37,12 @@ body,
 .el-table{
     margin-top: 10px;
 }
+
+/* table表头样式 */
+.el-table .el-table__header-wrapper th, .el-table .el-table__fixed-header-wrapper th {
+    word-break: break-word;
+    background-color: #f8f8f9;
+    color: #515a6e;
+    height: 40px;
+    font-size: 13px;
+}
